# donation-box

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: lint.yml  preview.yml
src/: app.py  main.py
src/app/annotations/: routes.py
src/app/core/: event_loop.py
src/app/routes/: __init__.py  auth_route.py  deploy_miner_route.py  route_handler.py  status_route.py
src/app/utils/: __init__.py  route_store.py
src/donationbox/: app.py
src/donationbox/dclasses/: __init__.py
src/donationbox/lifecycle/: lifecycle.py
src/donationbox/routes/: auth_route.py  config_route.py  deploy_miner_route.py  poll_route.py  status_route.py
src/donationbox/utils/: __init__.py  docker_manager.py  encryption.py  settings.py
tests/donationbox/: test_encryption.py
